<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".BALayout">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <group
        android:id="@+id/xmlChoice"
        android:checkableBehavior="single">

        <item
            android:id="@+id/slowest"
            android:checked="true"
            android:onClick="onGroupItemClick"
            android:orderInCategory="200"
            android:title="@string/slowestXml"/>
        <item
            android:id="@+id/removeOverDraw"
            android:onClick="onGroupItemClick"
            android:orderInCategory="220"
            android:title="@string/overdrawXml"/>
        <item
            android:id="@+id/RemoveLLremoveOverDraw"
            android:onClick="onGroupItemClick"
            android:orderInCategory="220"
            android:title="@string/removeLLoverdrawXml"/>
        <item
            android:id="@+id/fast"
            android:onClick="onGroupItemClick"
            android:orderInCategory="300"
            android:title="@string/fastXml"/>
        <item
            android:id="@+id/fastRLinrow"
            android:onClick="onGroupItemClick"
            android:orderInCategory="310"
            android:title="@string/RLfastXml"/>
    </group>

    <item
        android:id="@+id/useFib"
        android:checkable="true"
        android:onClick="onGroupItemClick"
        android:orderInCategory="400"
        android:title="@string/useFib"/>
    <item
        android:id="@+id/invalidateMain"
        android:checkable="true"
        android:onClick="onGroupItemClick"
        android:orderInCategory="500"
        android:title="@string/invalidateMain"/>
    <item
        android:id="@+id/addObjects"
        android:checkable="true"
        android:checked="false"
        android:onClick="onGroupItemClick"
        android:orderInCategory="600"
        android:title="@string/addObjectsString"/>
    <item
        android:id="@+id/memoryLeak"
        android:checkable="true"
        android:checked="false"
        android:onClick="onGroupItemClick"
        android:orderInCategory="700"
        android:title="@string/memoryLeakString"/>
</menu>
